# stembed

./: .gitignore  Goals.md  README.md
code/: CONTRIBUTIONS.md  Cargo.toml  extra_dict.json
code/cofit/: Cargo.toml
code/cofit/src/: lib.rs  message.rs  receiver.rs  registry.rs  task.rs  transmitter.rs  transport.rs
code/cofit/tests/: dummy.rs
code/fat32/: Cargo.toml
code/fat32/src/: block_device.rs  filesystem.rs  lib.rs  mbr.rs  reader.rs
code/fat32/src/fat/: directory.rs  mod.rs  volume_id.rs
code/fat32/tests/: file-based.rs
code/full-stack/: Cargo.toml
code/full-stack/cli/: Cargo.toml
code/full-stack/cli/src/: main.rs
code/full-stack/cofit/: Cargo.toml
code/full-stack/cofit/src/: lib.rs  message.rs  receiver.rs  registry.rs  task.rs  transmitter.rs  transport.rs
code/full-stack/cofit/src/usb_hid/: mod.rs  wrapper.rs
code/full-stack/cofit/tests/: dummy.rs
code/full-stack/engine/: Cargo.toml
code/full-stack/engine/src/: lib.rs  output.rs
code/full-stack/engine/src/input/: mod.rs  position.rs  state.rs
code/full-stack/firmware/: Cargo.toml  memory_with_bootloader.x
code/full-stack/firmware/.cargo/: config.toml
code/full-stack/firmware/src/: main.rs  setup.rs
code/full-stack/firmware/src/driver/: mod.rs  winbond.rs
code/full-stack/firmware/src/hardware/: flash.rs  keymatrix.rs  mod.rs  spi_flash.rs  time.rs
code/full-stack/firmware/src/hardware/usb/: channel.rs  keyboard.rs  mod.rs
code/full-stack/runtime/: Cargo.toml
code/full-stack/runtime/src/: lib.rs
code/full-stack/runtime/src/api/: flash.rs  mod.rs
code/full-stack/runtime/src/message/flash/: erase.rs  mod.rs  read.rs  write.rs
code/full-stack/runtime/src/runtime/: hardware.rs  mod.rs  mutex.rs
code/full-stack/runtime/src/runtime/handler/: indirect.rs  mod.rs
code/full-stack/runtime/src/runtime/handler/flash/: erase.rs  mod.rs  read.rs  write.rs
code/full-stack/runtime/src/runtime/old_engine/: mod.rs  repeat.rs
code/shittycli/: Cargo.toml
code/shittycli/src/: main.rs
code/shittycli/src/hid/: mod.rs  wrapper.rs
code/shittyengine/: Cargo.toml  DataFlow.md  Dictionary.md  Engine & Firmware notes.md  Orthography.md
code/shittyengine/examples/: geminipr.rs  output.rs
code/shittyengine/src/: buffer.rs  lib.rs  main.rs  stroke.rs
code/shittyengine/src/compile/: mod.rs  translations.rs  tree.rs
code/shittyengine/src/compile/json/: dict.rs  mod.rs  stroke.rs
code/shittyengine/src/dict/: inmemory.rs  mod.rs  tree.rs
code/shittyengine/src/formatter/: command.rs  mod.rs  state.rs
code/shittyengine/src/matcher/: entry.rs  mod.rs  mutator.rs  resolver.rs  state.rs
code/shittyengine/src/output/: aggregator.rs  command.rs  mod.rs
code/shittyengine/src/output/os/: keyinput.rs  mod.rs
code/shittyfirmware/: Cargo.toml
code/shittyfirmware/.cargo/: config.toml
code/shittyfirmware/src/: main.rs  setup.rs
code/shittyfirmware/src/hardware/: flash.rs  keymatrix.rs  mod.rs  timer.rs
code/shittyfirmware/src/hardware/usb/: channel.rs  keyboard.rs  mod.rs
code/shittyfirmware/src/logic/: grouping.rs  mod.rs  repeating.rs
code/shittyruntime/: Cargo.toml  Communication.md  Messages.md
code/shittyruntime/src/: lib.rs
code/shittyruntime/src/cofit/: header.rs  mod.rs
code/shittyruntime/src/cofit/stream/: mod.rs  read.rs  write.rs
code/shittyruntime/src/firmware/: flash.rs  mod.rs  peripherals.rs  sync.rs  time.rs
code/shittyruntime/src/firmware/executor_support/: embassy.rs  mod.rs  tokio.rs
code/shittyruntime/src/input/: grouping.rs  mod.rs  position.rs  repeating.rs  state.rs
code/shittyruntime/src/runtime/: messaging.rs  mod.rs
code/stabg/: .gitignore  Cargo.toml  StackLogic.md
code/stabg/src/: collection.rs  context.rs  executor.rs  identifier.rs  lib.rs  macros.rs  processor.rs  registry.rs  serialization.rs  stack.rs
code/stabg/src/queue/: dynamic.rs  mod.rs
code/stabg/src/registry/: dynamic.rs  fixed.rs  iterator.rs  mod.rs
code/stabg/src/stack/: dynamic.rs  fixed.rs  mod.rs
code/stabg/stabg-derive/: Cargo.toml
code/stabg/stabg-derive/src/: lib.rs
code/stabg/tests/: example.rs  example_async.rs  miep.rs
code/stembed/: Cargo.toml
code/stembed-cli/: Cargo.toml
code/stembed-cli/src/: main.rs
code/stembed-nrf/: Cargo.toml  setup.sh
code/stembed-nrf/.cargo/: config.toml
code/stembed-nrf/src/: constants.rs  dict.rs  lib.rs  main.rs  sdcard.rs
code/stembed-nrf/src/firmware/: dict.rs  entrypoint.rs  file_reader.rs  input.rs  main_spi.rs  mod.rs  sdcard.rs
code/stembed/src/: constants.rs  io.rs  lib.rs
code/stembed/src/compile/: compiler.rs
code/stembed/src/core/: mod.rs  stroke.rs
code/stembed/src/core/dict/: ext.rs  mod.rs
code/stembed/src/core/dict/binary/: entry.rs  fnv.rs  mod.rs
code/stembed/src/core/engine/: buffer.rs  command.rs  mod.rs  outline.rs
code/stembed/src/core/processor/: mod.rs
code/stembed/src/core/processor/text_formatter/: attachment.rs  capitalization.rs  command.rs  formatter.rs  mod.rs  output.rs  state.rs
code/stembed/src/core/stroke/: context.rs  mod.rs
code/stembed/src/import/: mod.rs  plover.rs
code/stembed/src/input/: mod.rs
code/stembed/src/input/serial/: gemini.rs  mod.rs
code/stembed/src/io/: ext.rs  mod.rs  util.rs
code/stembed/src/output/: mod.rs  os.rs
code/stembed/src/serialize/: command.rs  dict_entry.rs  mod.rs  strings.rs  stroke.rs  stroke_context.rs
code/stembed/tests/: compiler.rs  engine.rs  import.rs  processor.rs  stroke.rs
docs/: Dictionary.md  Input.md  NewArchitecture.md  Orthography.md  PloverParsing.md  PrefixTreeDict.md  Stroke format.md
