[package]
name = "fat32"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = { version = "0.3", default-features = false }
defmt = "0.3"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
