[package]
name = "stembed-nrf"
version = "0.1.0"
edition = "2021"
authors = ["Til Blechschmidt <til@blechschmidt.dev>"]

[features]
default = ["nightly"]
nightly = ["embassy-nrf/nightly"]

[dependencies]
embassy = { git = "https://github.com/embassy-rs/embassy", features = ["defmt"] }
embassy-nrf = { git = "https://github.com/embassy-rs/embassy", features = ["defmt", "nrf52840", "time-driver-rtc1", "gpiote"] }

embedded-hal = "0.2.7"

defmt = "0.3"
defmt-rtt = "0.3"

cortex-m = "0.7.3"
cortex-m-rt = "0.7.0"
alloc-cortex-m = "0.4.2"

panic-probe = { version = "0.3", features = ["print-defmt"] }
futures = { version = "0.3.17", default-features = false, features = ["async-await"] }

stembed = { path = "../stembed", default-features = false }
smallvec = "1.8"


embedded-sdmmc = { git = "https://github.com/rust-embedded-community/embedded-sdmmc-rs", features = ["defmt-log"], default-features = false }
nrf52840-hal = "0.15"

[profile.dev]
debug = 1 # default is `true`; not needed if not already overridden

[profile.release]
debug = 1 # default is `false`; using `true` is also OK as symbols reside on the host, not the target
