[package]
name = "stembed"
version = "0.1.0"
edition = "2021"
authors = ["Til Blechschmidt <til@blechschmidt.dev>"]

[dependencies]
smallvec = "1.8"
smol_str = { version = "0.1", default_features = false }
fnv = { version = "1.0", default_features = false }
combine = { version = "4.0", default_features = false }

serialport = { version = "4.0", optional = true }
autopilot = { version = "0.4.0", optional = true }

[features]
default = ["compile", "serial"]
std = []
compile = []

# Inputs
serial = ["serialport", "std"]

# Outputs
desktop = ["autopilot"]