[package]
name = "stembed"
version = "0.1.0"
edition = "2021"
authors = ["Til Blechschmidt <til@blechschmidt.dev>"]

[dependencies]
defmt = "0.3"
smallvec = "1.8"
smol_str = { version = "0.1", default-features = false }
combine = { version = "4.0", default-features = false, optional = true }

serialport = { version = "4.0", optional = true }
autopilot = { version = "0.4.0", optional = true }

[dev-dependencies]
smol = "1.2.5"

[features]
default = []
std = []
compile = []
import = ["combine"]

# Inputs
serial = ["std", "serialport"]

# Outputs
desktop = ["std", "autopilot"]
