[package]
name = "cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cofit = { path = "../cofit", features = ["usb"] }
runtime = { path = "../runtime", features = ["api"], default-features = false }

tokio = { version = "1", features = ["full"] }
hidapi = "1.4.1"