[package]
name = "runtime"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["runtime"]
api = ["std"]
runtime = []

std = []

[dependencies]
cofit = { path = "../cofit" }
engine = { path = "../engine" }

futures = { version = "0.3.17", default-features = false, features = ["async-await"] }
embedded-storage-async = "0.3.0"
critical-section = "0.2.7"