[package]
name = "runtime"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["runtime"]
api = ["std", "tokio"]
runtime = ["defmt"]

std = ["futures/std"]

[dependencies]
cofit = { path = "../cofit" }
engine = { path = "../engine" }

futures = { version = "0.3.17", default-features = false, features = ["async-await"] }
embedded-storage-async = "0.3.0"
critical-section = "0.2.7"

tokio = { version = "1.20", features = ["time"], default-features = false, optional = true }

defmt = { version = "0.3", optional = true }

# For now we just import the old engine until we figure out how to do things properly :)
shittyengine = { path = "../../shittyengine" }